--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 		</section>
 		
 		<section>
-			<a href="#">Follow</a>
+			<a id="follow" href="#">Follow</a>
 			<ion-icon name="logo-facebook"></ion-icon>
 			<ion-icon name="logo-twitter"></ion-icon>
-			<ion-icon name="logo-instagram"></ion-icon>
+			<ion-icon name="logo-instagram" id="instagram"></ion-icon>
 		</section>
 	</footer>
 	
