--- a/index.html
+++ b/index.html
@@ -31,11 +31,60 @@
 	</section>
 
 	<section class="container">
-		<p class="font-ubuntu">photodiary</p>
+		<a href="#"><h4 class="font-ubuntu">photodiary</h4></a>
 		<h1>the perfect weekend gataway</h1>
 		<p class="font-playfair">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, omnis? Id obcaecati facere, totam vel enim iure maiores, cum praesentium, fuga laudantium vero dolores doloremque. Animi ullam ipsum beatae ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellat itaque assumenda excepturi officiis optio asperiores quaerat magnam et magni eligendi ipsam porro explicabo quibusdam suscipit iure delectus, deserunt corrupti! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, ipsum nulla repellat, eos reiciendis earum, temporibus accusantium cumque facere quam iste totam ab deserunt! Omnis cupiditate enim deserunt facilis numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. At blanditiis voluptatem voluptatibus adipisci nihil amet omnis quis nam aliquam, provident accusantium, maxime explicabo, cumque dolores nisi itaque velit qui eveniet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero praesentium mollitia sit odio? Eveniet reprehenderit et nostrum non similique possimus facilis eos! Ab consectetur ea repellat, id debitis laborum aspernatur?</p>
-		<p class="font-ubuntu" id="comment">leave a comment</p>
+		<a href="#"><h4 class="font-ubuntu" id="comment">leave a comment</h4></a>
 	</section>
+
+	<section class="container article-wrapper flex justify-between">
+		<div>
+			<img src="images/banner.jpg" alt="surati">
+			<a href="#"><h4 class="font-ubuntu">lifestyle</h4></a>
+			<h1>the perfect weekend gataway</h1>
+			<p class="font-playfair">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores unde adipisci consequuntur debitis consectetur aspernatur ea perferendis cum, dicta quas velit voluptatum dolor nostrum quia sapiente odio at veniam doloribus.</p>
+		</div>
+		<div>
+			<img src="images/banner.jpg" alt="surati">
+			<a href="#"><h4 class="font-ubuntu">lifestyle</h4></a>
+			<h1>the perfect weekend gataway</h1>
+			<p class="font-playfair">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores unde adipisci consequuntur debitis consectetur aspernatur ea perferendis cum, dicta quas velit voluptatum dolor nostrum quia sapiente odio at veniam doloribus.</p>
+		</div>
+		<div>
+			<img src="images/banner.jpg" alt="surati">
+			<a href="#"><h4 class="font-ubuntu">photodiary</h4></a>
+			<h1>the perfect weekend gataway</h1>
+			<p class="font-playfair">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores unde adipisci consequuntur debitis consectetur aspernatur ea perferendis cum, dicta quas velit voluptatum dolor nostrum quia sapiente odio at veniam doloribus.</p>
+		</div>
+		<div>
+			<img src="images/banner.jpg" alt="surati">
+			<a href="#"><h4 class="font-ubuntu">photodiary</h4></a>
+			<h1>the perfect weekend gataway</h1>
+			<p class="font-playfair">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores unde adipisci consequuntur debitis consectetur aspernatur ea perferendis cum, dicta quas velit voluptatum dolor nostrum quia sapiente odio at veniam doloribus.</p>
+		</div>
+	</section>
+
+	<section id="subscribe" class="br-gray">
+		<h1>sign up for our newsletter!</h1>
+		<form>
+			<input type="email" name="email" placeholder="Enter a valid email address">
+		</form>
+	</section>
+
+	<section class="container article-wrapper flex justify-between">
+		<div>
+			<img src="images/banner.jpg" alt="surati">
+			<a href="#"><h4 class="font-ubuntu">lifestyle</h4></a>
+			<h1>the perfect weekend gataway</h1>
+			<p class="font-playfair">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores unde adipisci consequuntur debitis consectetur aspernatur ea perferendis cum, dicta quas velit voluptatum dolor nostrum quia sapiente odio at veniam doloribus.</p>
+		</div>
+		<div>
+			<img src="images/banner.jpg" alt="surati">
+			<a href="#"><h4 class="font-ubuntu">lifestyle</h4></a>
+			<h1>the perfect weekend gataway</h1>
+			<p class="font-playfair">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores unde adipisci consequuntur debitis consectetur aspernatur ea perferendis cum, dicta quas velit voluptatum dolor nostrum quia sapiente odio at veniam doloribus.</p>
+		</div>
+		</section>
 
 	<footer>
 		<section>
@@ -44,10 +93,10 @@
 		</section>
 		
 		<section>
-			<a id="follow" href="#">Follow</a>
-			<ion-icon name="logo-facebook"></ion-icon>
-			<ion-icon name="logo-twitter"></ion-icon>
-			<ion-icon name="logo-instagram" id="instagram"></ion-icon>
+			<span>Follow</span>
+			<a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+			<a href=""><ion-icon name="logo-twitter"></ion-icon></a>
+			<a href=""><ion-icon name="logo-instagram" id="instagram"></ion-icon></a>
 		</section>
 	</footer>
 	
