--- a/index.html
+++ b/index.html
@@ -67,7 +67,23 @@
 	<section id="subscribe" class="br-gray">
 		<h1>sign up for our newsletter!</h1>
 		<form>
+			<label for="email">E-mail:</label>
 			<input type="email" name="email" placeholder="Enter a valid email address">
+			<br><br>
+			<label for="password"> Your password:</label>
+			<input type="password" id="password" name="password" placeholder="Enter your last name">
+			<br><br>
+			<label for="age" id="label_age">Your age:</label>
+			<select name="age" id="age">
+				<option value="0-18">0-18</option>
+				<option value="18-40">18-40</option>
+				<option value="40+">40+</option>
+			</select>
+			<br><br>
+			<label for="about">About yourself:</label>
+			<textarea name="about" id="about" cols="30" rows="2"></textarea>
+			<br><br>
+			<input type="submit" value="Register" id="submit">
 		</form>
 	</section>
 
